--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,28 +7,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %} {% endblock title %}</title>
-        <link rel="stylesheet" href="{% static 'css/receipts.css' %}">
+        <link rel="stylesheet" href="{% static 'css/projects.css' %}">
     </head>
     <body>
         <header>
-            <h1> test TEST </h1>
             <nav>
                 <ul>
                     <li>
-                    <a href="{% url 'home' %}">Home</a>
+                    <a href="{% url 'list_projects' %}">Home</a>
                     </li>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'home' %}">Logout</a></li>
+                    <li><a href="{% url 'list_projects' %}">Logout</a></li>
                     {% else %}
-                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                    <li><a href="{% url 'list_projects' %}">Sign Up</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
                 {% endif %}
                 </ul>
             </nav>
         </header>
-    {% block content %}
-
-    {% endblock content %}
+        {% block content %} {% endblock content %}
         <footer>Made with ❤️ in Miami 🌴</footer>
     </body>
 </html>
