--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -19,8 +19,8 @@
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
-                    <li><a href="{% url 'list_projects' %}">Sign Up</a></li>
-                    <li><a href="{% url 'list_projects' %}">Login</a></li>
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
                 {% endif %}
                 </ul>
             </nav>
