--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -19,7 +19,7 @@
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
-                    <li><a href="{% url 'list_projects' %}">Sign Up</a></li>
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
                 {% endif %}
                 </ul>
