--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -22,10 +22,10 @@
                     {% for project in projects %}
                     <tr>
                         <td>
-                            {{ project.name }}
+                            <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
                         </td>
                         <td>
-                            {{ project.name }}
+                            {{ project.tasks.all|length }}
                         </td>
                     </tr>
                     {% endfor %}
