--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,35 +1,37 @@
-{% extends "base.html" %}
-{% block title %}Tracker{% endblock title %}
-{% block body %}
-<main>
-    <div>
-        <h1>My Projects</h1>
-        {% if project in projects %}
-            <div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Number of tasks</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for project in projects %}
-                        <tr>
-                            <td>
-                                <a href="{% url 'projects/<int:id>' %}">{{ project.name }}</a>
-                            </td>
-                            <td>
-                                {{ project.tasks|length }}
-                            </td>
-                        </tr>
+{% extends "tasks/base.html" %}
+{% block title %}{{ request.user}}'s Tasks{% endblock title %}
+
+{% block content %}
+    <main>
+        <div>
+            <h1>My Tasks</h1>
+            {% if tasks %}
+                <div>
+                    <table class="modern-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Start date</th>
+                                <th>Due date</th>
+                                <th>Is completed</th>
+                            </tr>
+                        </thead>
+                        {% for task in tasks %}
+                        <tbody>
+                            <tr>
+                                <td>{{ task.name }}</td>
+                                <td>{{ task.start_date|date:"N j, Y, g:i a" }}</td>
+                                <td>{{ task.due_date|date:"N j, Y, g:i a" }}</td>
+                                <td>{{ task.is_completed|yesno }}</td>
+                            </tr>
+                        </tbody>
                         {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        {% else %}
-            <p>You are not assigned to any projects</p>
-        {% endif %}
-    </div>
-</main>
-{% endblock body %}
+                    </table>
+                </div>
+            {% else %}
+                <p>You have no tasks</p>
+            {% endif %}
+        </div>
+    </main>
+
+{% endblock content %}
