--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -13,15 +13,16 @@
         <header>
             <nav>
                 <ul>
-                    <li>
-                    <a href="{% url 'list_projects' %}">Home</a>
-                    </li>
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                        <li><a href="{% url 'show_my_tasks' %}">My tasks</a></li>
+                        <li>
+                            <a href="{% url 'list_projects' %}">My projects</a>
+                        </li>
                     {% else %}
-                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                {% endif %}
+                        <li><a href="{% url 'signup' %}">Signup</a></li>
+                        <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
                 </ul>
             </nav>
         </header>
