--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -12,13 +12,14 @@
         <header>
             <nav>
                 <ul>
-                    <li>
-                    <a href="{% url 'home' %}">Home</a>
-                    </li>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'home' %}">Logout</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <li><a href="{% url 'show_my_tasks' %}">My tasks</a></li>
+                    <li>
+                        <a href="{% url 'list_projects' %}">My projects</a>
+                    </li>
                     {% else %}
-                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                    <li><a href="{% url 'signup' %}">Signup</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
                 {% endif %}
                 </ul>
