--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -6,7 +6,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %} {% endblock title %}</title>
+        <title>
+            {% block title %}
+            {% endblock title %}
+        </title>
         <link rel="stylesheet" href="{% static 'css/projects.css' %}">
     </head>
     <body>
@@ -14,19 +17,30 @@
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'logout' %}">Logout</a></li>
-                        <li><a href="{% url 'show_my_tasks' %}">My tasks</a></li>
+                        <li>
+                            <a href="{% url 'logout' %}">Logout</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'show_my_tasks' %}">My tasks</a>
+                        </li>
                         <li>
                             <a href="{% url 'list_projects' %}">My projects</a>
                         </li>
                     {% else %}
-                        <li><a href="{% url 'signup' %}">Signup</a></li>
-                        <li><a href="{% url 'login' %}">Login</a></li>
+                        <li>
+                            <a href="{% url 'signup' %}">Signup</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'login' %}">Login</a>
+                        </li>
                     {% endif %}
                 </ul>
             </nav>
         </header>
-        {% block content %} {% endblock content %}
-        <footer>Made with ❤️ in Miami 🌴</footer>
+        {% block content %}
+        {% endblock content %}
+        <footer>
+            Made with ❤️ in Miami 🌴
+        </footer>
     </body>
 </html>
