--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -1,33 +1,46 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %} {% endblock title %}</title>
+        <title>
+            {% block title %}
+            {% endblock title %}
+        </title>
         <link rel="stylesheet" href="{% static '/css/tasks.css' %}">
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                    <li><a href="{% url 'show_my_tasks' %}">My tasks</a></li>
-                    <li>
-                        <a href="{% url 'list_projects' %}">My projects</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url 'logout' %}">Logout</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'show_my_tasks' %}">My tasks</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'list_projects' %}">My projects</a>
+                        </li>
                     {% else %}
-                    <li><a href="{% url 'signup' %}">Signup</a></li>
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                {% endif %}
+                        <li>
+                            <a href="{% url 'signup' %}">Signup</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'login' %}">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </nav>
         </header>
-    {% block content %}
-
-    {% endblock content %}
-        <footer>Made with ❤️ in Miami 🌴</footer>
+        {% block content %}
+        {% endblock content %}
+        <footer>
+            Made with ❤️ in Miami 🌴
+        </footer>
     </body>
 </html>
